--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,9 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Alexis\\AppSalonPhpMvcJsSass\\": "src/",
-            "MVC\\" : "./",
-            "Controllers\\" : "./controllers",
-            "Model\\" : "./models"
+            "MVC\\" :".",
+            "Controllers\\":"./controllers/",
+            "Model\\":"./models/"
             
 
         }
