--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,7 @@
             "email": "alexis96fer@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "phpmailer/phpmailer": "^6.7"
+    }
 }
