--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         }
     ],
     "require": {
+        "php": ">=8.2",
         "phpmailer/phpmailer": "^6.7",
         "vlucas/phpdotenv": "^5.5"
     }
